backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-backend
  namespace: frontend
  labels:
    app.kubernetes.io/name: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: backend
    spec:
      containers:
        - name: weather-backend
          image: gsanjay06/weather:backend
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
