backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: frontend
spec:
  selector:
    app.kubernetes.io/name: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
